# MedCrawler

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-app.yml
backend/: __init__.py
backend/crawlers/: __init__.py  base.py  clinical_trials.py  exceptions.py  pubmed.py
backend/utils/: __init__.py  notification_manager.py  tasks.py
crawlers/: base.py  clinical_trials.py  config.py  demo.py  exceptions.py
medcrawler/: __init__.py  __version__.py  base.py  clinical_trials.py  config.py  demo.py  exceptions.py  logging_config.py  pubmed.py
pages/: __init__.py  home.py  notifications.py  search.py
tests/: conftest.py  test_base.py  test_config.py  test_crawlers.py  test_notification_manager.py  test_tasks.py
tests/integration/: test_clinical_trials.py  test_performance.py  test_pubmed.py  test_rate_limits.py
